# rhdlc

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/sawtooth/: Cargo.toml
examples/sawtooth/src/: top.rhdl
examples/sawtooth/src/sound/: mod.rhdl
rhdlc/: Cargo.toml
rhdlc/examples/sawtooth/: rhdl.toml
rhdlc/examples/sawtooth/src/sound/: sawtooth.rhdl
rhdlc/src/: error.rs  ident.rs  main.rs  resolve.rs  scope.rs
rhdlc/src/error/: mod.rs  render.rs
rhdlc/src/scope/: mod.rs  name.rs  use.rs  visibility.rs
rhdlc/test/compile-fail/file-resolution/no-module-multiple/: expected.txt
rhdlc/test/compile-fail/file-resolution/no-module-nested/: expected.txt
rhdlc/test/compile-fail/file-resolution/no-module-single/: expected.txt
rhdlc/test/compile-fail/identifier/path_segment_keyword/: expected.txt  top.rhdl
rhdlc/test/compile-fail/multiple-definition-fn/: top.rhdl
rhdlc/test/compile-fail/multiple-definition-fn-mod-struct/: expected.txt
rhdlc/test/compile-fail/multiple-definition-mod/: expected.txt
rhdlc/test/compile-fail/multiple-definition-struct-fn/: expected.txt  top.rhdl
rhdlc/test/compile-fail/multiple-definition-struct-fn-mod/: expected.txt  top.rhdl
rhdlc/test/compile-fail/multiple-definition-struct-mod/: expected.txt
rhdlc/test/compile-fail/no-module-multiple/: expected.txt  top.rhdl
rhdlc/test/compile-fail/no-module-nested/: expected.txt
rhdlc/test/compile-fail/no-module-single/: expected.txt
rhdlc/test/compile-fail/resolution/no-module-nested/: expected.txt
rhdlc/test/compile-fail/scope/use-crate-name/: top.rhdl
rhdlc/test/compile-fail/scope/use-crate-name-from-mod/: expected.txt  top.rhdl
rhdlc/test/compile-fail/scope/use-mod-self-struct/: expected.txt  top.rhdl
rhdlc/test/compile-fail/scope/use-mod-super-mod/: top.rhdl
rhdlc/test/compile-fail/scope/use-nested-private-struct/: expected.txt
rhdlc/test/compile-fail/scope/use-no-name/: top.rhdl
rhdlc/test/compile-fail/scope/use-private-struct/: top.rhdl
src/: error.rs  find_file.rs  ident.rs  main.rs  primitives.rs  resolve.rs
src/error/: mod.rs  render.rs
src/resolution/: build.rs  conflicts.rs  graph.rs  mod.rs  name.rs  path.rs  pub.rs  type_existence.rs  use.rs  visibility.rs
src/resolution/path/: mod.rs  mut.rs  simple.rs  type.rs
src/scope/: mod.rs  use.rs  visibility.rs
src/type_checker/: mod.rs
test/compile-fail/file-resolution/duplicate-module-files/: expected.txt
test/compile-fail/file-resolution/no-module-in-mod-dir/: expected.txt
test/compile-fail/file-resolution/no-module-nested/: expected.txt  top.rhdl
test/compile-fail/file-resolution/no-module-single/: expected.txt
test/compile-fail/file-resolution/no-nested-module-file/: expected.txt
test/compile-fail/parse/unexpected-token/: expected.txt  (+1 more)
(+219 files in other folders)
