[package]
name = "rhdlc"
version = "0.1.0"
authors = ["Sameer Puri <purisame@spuri.io>"]
edition = "2018"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/rhdl/rhdl"
description = "Compiler for RHDL"

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
colored = "2"
paste = "0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
log = "0"
env_logger = "0"
petgraph = "0.5"
strsim = "0.10"
clap = "2"

[features]
no-color = ["colored/no-color"]

[dev-dependencies]
pretty_assertions = "0.6"