[package]
name = "rhdlc"
version = "0.1.0"
authors = ["Sameer Puri <purisame@spuri.io>"]
edition = "2018"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/rhdl/rhdl"
description = "Compiler for RHDL"

[dependencies]
paste = "1"
log = "0"
env_logger = "0"
strsim = "0.10"
clap = "2"
fxhash = "0.2"
afl = { version = "*", optional = true }
rhdl = { version = "*", git = "https://github.com/rhdl/rhdl.git", branch = "main" }
codespan = "0.9"
codespan-reporting = "0.9"
lalrpop-util = "*"

[features]
no-color = []
fuzz = ["afl"]

[dev-dependencies]
pretty_assertions = "0.6"
